profilelist1exp/unpackaged/objects/public_assets_extobj__x.object
<CustomObject>
    <description>public$assets_extobj</description>
    <externalDataSource>Heroku_Assets</externalDataSource>
    <externalName>public$assets_extobj</externalName>
    <fields>
        <fullName>active_version__c</fullName>
        <description>active_version</description>
        <externalDeveloperName>active_version</externalDeveloperName>
        <label>active_version</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apps_backbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_backbox</description>
        <externalDeveloperName>apps_backbox</externalDeveloperName>
        <label>apps_backbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_besr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_besr</description>
        <externalDeveloperName>apps_besr</externalDeveloperName>
        <label>apps_besr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_comvault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_comvault</description>
        <externalDeveloperName>apps_comvault</externalDeveloperName>
        <label>apps_comvault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_ddbea__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_ddbea</description>
        <externalDeveloperName>apps_ddbea</externalDeveloperName>
        <label>apps_ddbea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_ddbea_db2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_ddbea_db2</description>
        <externalDeveloperName>apps_ddbea_db2</externalDeveloperName>
        <label>apps_ddbea_db2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_ddbea_oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_ddbea_oracle</description>
        <externalDeveloperName>apps_ddbea_oracle</externalDeveloperName>
        <label>apps_ddbea_oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_ddbea_sap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_ddbea_sap</description>
        <externalDeveloperName>apps_ddbea_sap</externalDeveloperName>
        <label>apps_ddbea_sap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_emc_avamar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_emc_avamar</description>
        <externalDeveloperName>apps_emc_avamar</externalDeveloperName>
        <label>apps_emc_avamar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_emc_greenplum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_emc_greenplum</description>
        <externalDeveloperName>apps_emc_greenplum</externalDeveloperName>
        <label>apps_emc_greenplum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_emc_networker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_emc_networker</description>
        <externalDeveloperName>apps_emc_networker</externalDeveloperName>
        <label>apps_emc_networker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_hpdp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_hpdp</description>
        <externalDeveloperName>apps_hpdp</externalDeveloperName>
        <label>apps_hpdp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_ism__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_ism</description>
        <externalDeveloperName>apps_ism</externalDeveloperName>
        <label>apps_ism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_mssql_boost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_mssql_boost</description>
        <externalDeveloperName>apps_mssql_boost</externalDeveloperName>
        <label>apps_mssql_boost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_netvault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_netvault</description>
        <externalDeveloperName>apps_netvault</externalDeveloperName>
        <label>apps_netvault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_oracle</description>
        <externalDeveloperName>apps_oracle</externalDeveloperName>
        <label>apps_oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_symantec_backupexec__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_symantec_backupexec</description>
        <externalDeveloperName>apps_symantec_backupexec</externalDeveloperName>
        <label>apps_symantec_backupexec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_symantec_netbackup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_symantec_netbackup</description>
        <externalDeveloperName>apps_symantec_netbackup</externalDeveloperName>
        <label>apps_symantec_netbackup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_syncsort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_syncsort</description>
        <externalDeveloperName>apps_syncsort</externalDeveloperName>
        <label>apps_syncsort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_tsm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_tsm</description>
        <externalDeveloperName>apps_tsm</externalDeveloperName>
        <label>apps_tsm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_veeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_veeam</description>
        <externalDeveloperName>apps_veeam</externalDeveloperName>
        <label>apps_veeam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apps_vranger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apps_vranger</description>
        <externalDeveloperName>apps_vranger</externalDeveloperName>
        <label>apps_vranger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asset_group__c</fullName>
        <description>asset_group</description>
        <externalDeveloperName>asset_group</externalDeveloperName>
        <label>asset_group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asset_parent_c__c</fullName>
        <description>asset_parent__c</description>
        <externalDeveloperName>asset_parent__c</externalDeveloperName>
        <label>asset_parent__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asset_source__c</fullName>
        <description>asset_source</description>
        <externalDeveloperName>asset_source</externalDeveloperName>
        <label>asset_source</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assettag__c</fullName>
        <description>assettag</description>
        <externalDeveloperName>assettag</externalDeveloperName>
        <label>assettag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avamar_data_protected_gb__c</fullName>
        <description>avamar_data_protected_gb</description>
        <externalDeveloperName>avamar_data_protected_gb</externalDeveloperName>
        <label>avamar_data_protected_gb</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avamar_grid_id__c</fullName>
        <description>avamar_grid_id</description>
        <externalDeveloperName>avamar_grid_id</externalDeveloperName>
        <label>avamar_grid_id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avamar_node__c</fullName>
        <description>avamar_node</description>
        <externalDeveloperName>avamar_node</externalDeveloperName>
        <label>avamar_node</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bandwidth_storage_reduction__c</fullName>
        <description>bandwidth_storage_reduction</description>
        <externalDeveloperName>bandwidth_storage_reduction</externalDeveloperName>
        <label>bandwidth_storage_reduction</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>compression_factor__c</fullName>
        <description>compression_factor</description>
        <externalDeveloperName>compression_factor</externalDeveloperName>
        <label>compression_factor</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>connected_to_serial_number__c</fullName>
        <description>connected_to_serial_number</description>
        <externalDeveloperName>connected_to_serial_number</externalDeveloperName>
        <label>connected_to_serial_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>connectrix_group__c</fullName>
        <description>connectrix_group</description>
        <externalDeveloperName>connectrix_group</externalDeveloperName>
        <label>connectrix_group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_number__c</fullName>
        <description>contract_number</description>
        <externalDeveloperName>contract_number</externalDeveloperName>
        <label>contract_number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_start_date__c</fullName>
        <description>contract_start_date</description>
        <externalDeveloperName>contract_start_date</externalDeveloperName>
        <label>contract_start_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contract_status__c</fullName>
        <description>contract_status</description>
        <externalDeveloperName>contract_status</externalDeveloperName>
        <label>contract_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cur__c</fullName>
        <description>cur</description>
        <externalDeveloperName>cur</externalDeveloperName>
        <label>cur</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currencyisocode__c</fullName>
        <description>currencyisocode</description>
        <externalDeveloperName>currencyisocode</externalDeveloperName>
        <label>currencyisocode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cust_nm__c</fullName>
        <description>cust_nm</description>
        <externalDeveloperName>cust_nm</externalDeveloperName>
        <label>cust_nm</label>
        <length>360</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cust_sls_cat_cd__c</fullName>
        <description>cust_sls_cat_cd</description>
        <externalDeveloperName>cust_sls_cat_cd</externalDeveloperName>
        <label>cust_sls_cat_cd</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_consumable_product_group__c</fullName>
        <description>customer_consumable_product_group</description>
        <externalDeveloperName>customer_consumable_product_group</externalDeveloperName>
        <label>customer_consumable_product_group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_consumable_product_name__c</fullName>
        <description>customer_consumable_product_name</description>
        <externalDeveloperName>customer_consumable_product_name</externalDeveloperName>
        <label>customer_consumable_product_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_support_level__c</fullName>
        <description>customer_support_level</description>
        <externalDeveloperName>customer_support_level</externalDeveloperName>
        <label>customer_support_level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dcn__c</fullName>
        <description>dcn</description>
        <externalDeveloperName>dcn</externalDeveloperName>
        <label>dcn</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddboost__c</fullName>
        <description>ddboost</description>
        <externalDeveloperName>ddboost</externalDeveloperName>
        <label>ddboost</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddos_version__c</fullName>
        <description>ddos_version</description>
        <externalDeveloperName>ddos_version</externalDeveloperName>
        <label>ddos_version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>de_install_date__c</fullName>
        <description>de_install_date</description>
        <externalDeveloperName>de_install_date</externalDeveloperName>
        <label>de_install_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dell_affinity_id__c</fullName>
        <description>dell_affinity_id</description>
        <externalDeveloperName>dell_affinity_id</externalDeveloperName>
        <label>dell_affinity_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_contract_end_date_c__c</fullName>
        <description>dell_asset_rma__contract_end_date__c</description>
        <externalDeveloperName>dell_asset_rma__contract_end_date__c</externalDeveloperName>
        <label>dell_asset_rma__contract_end_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_customer_consumable_produ__c</fullName>
        <description>dell_asset_rma__customer_consumable_product_group__c</description>
        <externalDeveloperName>dell_asset_rma__customer_consumable_product_group__c</externalDeveloperName>
        <label>dell_asset_rma__customer_consumable_prod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_customer_name_c__c</fullName>
        <description>dell_asset_rma__customer_name__c</description>
        <externalDeveloperName>dell_asset_rma__customer_name__c</externalDeveloperName>
        <label>dell_asset_rma__customer_name__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_estimated_raw_capacity_tb__c</fullName>
        <description>dell_asset_rma__estimated_raw_capacity_tb__c</description>
        <externalDeveloperName>dell_asset_rma__estimated_raw_capacity_tb__c</externalDeveloperName>
        <label>dell_asset_rma__estimated_raw_capacity_t</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_install_base_status_c__c</fullName>
        <description>dell_asset_rma__install_base_status__c</description>
        <externalDeveloperName>dell_asset_rma__install_base_status__c</externalDeveloperName>
        <label>dell_asset_rma__install_base_status__c</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_install_date_c__c</fullName>
        <description>dell_asset_rma__install_date__c</description>
        <externalDeveloperName>dell_asset_rma__install_date__c</externalDeveloperName>
        <label>dell_asset_rma__install_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_leased_purchased_c__c</fullName>
        <description>dell_asset_rma__leased_purchased__c</description>
        <externalDeveloperName>dell_asset_rma__leased_purchased__c</externalDeveloperName>
        <label>dell_asset_rma__leased_purchased__c</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_marked_for_deletion_c__c</fullName>
        <description>dell_asset_rma__marked_for_deletion__c</description>
        <externalDeveloperName>dell_asset_rma__marked_for_deletion__c</externalDeveloperName>
        <label>dell_asset_rma__marked_for_deletion__c</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_model_c__c</fullName>
        <description>dell_asset_rma__model__c</description>
        <externalDeveloperName>dell_asset_rma__model__c</externalDeveloperName>
        <label>dell_asset_rma__model__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_next_quoted_contract_stat__c</fullName>
        <description>dell_asset_rma__next_quoted_contract_status__c</description>
        <externalDeveloperName>dell_asset_rma__next_quoted_contract_status__c</externalDeveloperName>
        <label>dell_asset_rma__next_quoted_contract_sta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_order_date_c__c</fullName>
        <description>dell_asset_rma__order_date__c</description>
        <externalDeveloperName>dell_asset_rma__order_date__c</externalDeveloperName>
        <label>dell_asset_rma__order_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_product_family_c__c</fullName>
        <description>dell_asset_rma__product_family__c</description>
        <externalDeveloperName>dell_asset_rma__product_family__c</externalDeveloperName>
        <label>dell_asset_rma__product_family__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_pvr_type_c__c</fullName>
        <description>dell_asset_rma__pvr_type__c</description>
        <externalDeveloperName>dell_asset_rma__pvr_type__c</externalDeveloperName>
        <label>dell_asset_rma__pvr_type__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_serial_number_c__c</fullName>
        <description>dell_asset_rma__serial_number__c</description>
        <externalDeveloperName>dell_asset_rma__serial_number__c</externalDeveloperName>
        <label>dell_asset_rma__serial_number__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_ship_date_c__c</fullName>
        <description>dell_asset_rma__ship_date__c</description>
        <externalDeveloperName>dell_asset_rma__ship_date__c</externalDeveloperName>
        <label>dell_asset_rma__ship_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dell_asset_rma_sold_by_c__c</fullName>
        <description>dell_asset_rma__sold_by__c</description>
        <externalDeveloperName>dell_asset_rma__sold_by__c</externalDeveloperName>
        <label>dell_asset_rma__sold_by__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distribution_var__c</fullName>
        <description>distribution_var</description>
        <externalDeveloperName>distribution_var</externalDeveloperName>
        <label>distribution_var</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributor_direct_reseller__c</fullName>
        <description>distributor_direct_reseller</description>
        <externalDeveloperName>distributor_direct_reseller</externalDeveloperName>
        <label>distributor_direct_reseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encryption__c</fullName>
        <description>encryption</description>
        <externalDeveloperName>encryption</externalDeveloperName>
        <label>encryption</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_of_service_life_date__c</fullName>
        <description>end_of_service_life_date</description>
        <externalDeveloperName>end_of_service_life_date</externalDeveloperName>
        <label>end_of_service_life_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expandedstorage__c</fullName>
        <description>expandedstorage</description>
        <externalDeveloperName>expandedstorage</externalDeveloperName>
        <label>expandedstorage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_asset_id_c__c</fullName>
        <description>external_asset_id__c</description>
        <externalDeveloperName>external_asset_id__c</externalDeveloperName>
        <label>external_asset_id__c</label>
        <length>255</length>
        <referenceTargetField>Dell_Asset_RMA__Asset__c.External_Asset_ID__c</referenceTargetField>
        <referenceTo>Dell_Asset_RMA__Asset__c</referenceTo>
        <relationshipLabel>Extended Assets</relationshipLabel>
        <relationshipName>Extended_Assets</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>filetimestamp__c</fullName>
        <description>filetimestamp</description>
        <externalDeveloperName>filetimestamp</externalDeveloperName>
        <label>filetimestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>forecast_full__c</fullName>
        <description>forecast_full</description>
        <externalDeveloperName>forecast_full</externalDeveloperName>
        <label>forecast_full</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gen_description__c</fullName>
        <description>gen_description</description>
        <externalDeveloperName>gen_description</externalDeveloperName>
        <label>gen_description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generation__c</fullName>
        <description>generation</description>
        <externalDeveloperName>generation</externalDeveloperName>
        <label>generation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>globaldeduplication__c</fullName>
        <description>globaldeduplication</description>
        <externalDeveloperName>globaldeduplication</externalDeveloperName>
        <label>globaldeduplication</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grouped_serial_numbers__c</fullName>
        <description>grouped_serial_numbers</description>
        <externalDeveloperName>grouped_serial_numbers</externalDeveloperName>
        <label>grouped_serial_numbers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hostname__c</fullName>
        <description>hostname</description>
        <externalDeveloperName>hostname</externalDeveloperName>
        <label>hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ib_status__c</fullName>
        <description>ib_status</description>
        <externalDeveloperName>ib_status</externalDeveloperName>
        <label>ib_status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>instance_id__c</fullName>
        <description>instance_id</description>
        <externalDeveloperName>instance_id</externalDeveloperName>
        <label>instance_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>instance_nbr__c</fullName>
        <description>instance_nbr</description>
        <externalDeveloperName>instance_nbr</externalDeveloperName>
        <label>instance_nbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ios__c</fullName>
        <description>ios</description>
        <externalDeveloperName>ios</externalDeveloperName>
        <label>ios</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_autosupport_received__c</fullName>
        <description>last_autosupport_received</description>
        <externalDeveloperName>last_autosupport_received</externalDeveloperName>
        <label>last_autosupport_received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lease_exp_date__c</fullName>
        <description>lease_exp_date</description>
        <externalDeveloperName>lease_exp_date</externalDeveloperName>
        <label>lease_exp_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lease_number__c</fullName>
        <description>lease_number</description>
        <externalDeveloperName>lease_number</externalDeveloperName>
        <label>lease_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lease_status__c</fullName>
        <description>lease_status</description>
        <externalDeveloperName>lease_status</externalDeveloperName>
        <label>lease_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>microcode_family__c</fullName>
        <description>microcode_family</description>
        <externalDeveloperName>microcode_family</externalDeveloperName>
        <label>microcode_family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>microcode_version__c</fullName>
        <description>microcode_version</description>
        <externalDeveloperName>microcode_version</externalDeveloperName>
        <label>microcode_version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>most_relevant_quoted_contract_start_date__c</fullName>
        <description>most_relevant_quoted_contract_start_date</description>
        <externalDeveloperName>most_relevant_quoted_contract_start_date</externalDeveloperName>
        <label>most_relevant_quoted_contract_start_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nearline__c</fullName>
        <description>nearline</description>
        <externalDeveloperName>nearline</externalDeveloperName>
        <label>nearline</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>next_quoted_contract_end_date__c</fullName>
        <description>next_quoted_contract_end_date</description>
        <externalDeveloperName>next_quoted_contract_end_date</externalDeveloperName>
        <label>next_quoted_contract_end_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>next_quoted_contract_number__c</fullName>
        <description>next_quoted_contract_number</description>
        <externalDeveloperName>next_quoted_contract_number</externalDeveloperName>
        <label>next_quoted_contract_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>next_quoted_contract_status__c</fullName>
        <description>next_quoted_contract_status</description>
        <externalDeveloperName>next_quoted_contract_status</externalDeveloperName>
        <label>next_quoted_contract_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nodes_in_grid__c</fullName>
        <description>nodes_in_grid</description>
        <externalDeveloperName>nodes_in_grid</externalDeveloperName>
        <label>nodes_in_grid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_clients__c</fullName>
        <description>number_of_clients</description>
        <externalDeveloperName>number_of_clients</externalDeveloperName>
        <label>number_of_clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_hosts__c</fullName>
        <description>number_of_hosts</description>
        <externalDeveloperName>number_of_hosts</externalDeveloperName>
        <label>number_of_hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opp_close_dt__c</fullName>
        <description>opp_close_dt</description>
        <externalDeveloperName>opp_close_dt</externalDeveloperName>
        <label>opp_close_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opp_num__c</fullName>
        <description>opp_num</description>
        <externalDeveloperName>opp_num</externalDeveloperName>
        <label>opp_num</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order_type__c</fullName>
        <description>order_type</description>
        <externalDeveloperName>order_type</externalDeveloperName>
        <label>order_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orig_bill_to_cust__c</fullName>
        <description>orig_bill_to_cust</description>
        <externalDeveloperName>orig_bill_to_cust</externalDeveloperName>
        <label>orig_bill_to_cust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_lease_term__c</fullName>
        <description>original_lease_term</description>
        <externalDeveloperName>original_lease_term</externalDeveloperName>
        <label>original_lease_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_purchase_quote__c</fullName>
        <description>original_purchase_quote</description>
        <externalDeveloperName>original_purchase_quote</externalDeveloperName>
        <label>original_purchase_quote</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>party_number__c</fullName>
        <description>party_number</description>
        <externalDeveloperName>party_number</externalDeveloperName>
        <label>party_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_avamar_node_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>primary_avamar_node_flag</description>
        <externalDeveloperName>primary_avamar_node_flag</externalDeveloperName>
        <label>primary_avamar_node_flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <description>product_name</description>
        <externalDeveloperName>product_name</externalDeveloperName>
        <label>product_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pty_addr1__c</fullName>
        <description>pty_addr1</description>
        <externalDeveloperName>pty_addr1</externalDeveloperName>
        <label>pty_addr1</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pty_city__c</fullName>
        <description>pty_city</description>
        <externalDeveloperName>pty_city</externalDeveloperName>
        <label>pty_city</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pty_cntry_nm__c</fullName>
        <description>pty_cntry_nm</description>
        <externalDeveloperName>pty_cntry_nm</externalDeveloperName>
        <label>pty_cntry_nm</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pty_st__c</fullName>
        <description>pty_st</description>
        <externalDeveloperName>pty_st</externalDeveloperName>
        <label>pty_st</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchase_order_number__c</fullName>
        <description>purchase_order_number</description>
        <externalDeveloperName>purchase_order_number</externalDeveloperName>
        <label>purchase_order_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pvr_number__c</fullName>
        <description>pvr_number</description>
        <externalDeveloperName>pvr_number</externalDeveloperName>
        <label>pvr_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordtypeid__c</fullName>
        <description>recordtypeid</description>
        <externalDeveloperName>recordtypeid</externalDeveloperName>
        <label>recordtypeid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_build__c</fullName>
        <description>release_build</description>
        <externalDeveloperName>release_build</externalDeveloperName>
        <label>release_build</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>replication__c</fullName>
        <description>replication</description>
        <externalDeveloperName>replication</externalDeveloperName>
        <label>replication</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>retentionlock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>retentionlock</description>
        <externalDeveloperName>retentionlock</externalDeveloperName>
        <label>retentionlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sales_channel__c</fullName>
        <description>sales_channel</description>
        <externalDeveloperName>sales_channel</externalDeveloperName>
        <label>sales_channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>